--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,5 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation"
+    app:startDestination="@id/onboardingSatu">
 
+    <fragment
+        android:id="@+id/onboardingSatu"
+        android:name="org.d3ifcool.warehousehelper.OnboardingSatu"
+        android:label="fragment_onboarding_satu"
+        tools:layout="@layout/fragment_onboarding_satu" >
+        <action
+            android:id="@+id/action_onboardingSatu_to_onboardingDua"
+            app:destination="@id/onboardingDua" />
+    </fragment>
+    <fragment
+        android:id="@+id/onboardingDua"
+        android:name="org.d3ifcool.warehousehelper.OnboardingDua"
+        android:label="fragment_onboarding_dua"
+        tools:layout="@layout/fragment_onboarding_dua" >
+        <action
+            android:id="@+id/action_onboardingDua_to_onboardingTiga"
+            app:destination="@id/onboardingTiga" />
+    </fragment>
+    <fragment
+        android:id="@+id/onboardingTiga"
+        android:name="org.d3ifcool.warehousehelper.OnboardingTiga"
+        android:label="fragment_onboarding_tiga"
+        tools:layout="@layout/fragment_onboarding_tiga" />
 </navigation>
