--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/onboardingSatu"
-        android:name="org.d3ifcool.warehousehelper.OnboardingSatu"
+        android:name="org.d3ifcool.warehousehelper.boading.OnboardingSatu"
         android:label="fragment_onboarding_satu"
         tools:layout="@layout/fragment_onboarding_satu" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/onboardingDua"
-        android:name="org.d3ifcool.warehousehelper.OnboardingDua"
+        android:name="org.d3ifcool.warehousehelper.boading.OnboardingDua"
         android:label="fragment_onboarding_dua"
         tools:layout="@layout/fragment_onboarding_dua" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/onboardingTiga"
-        android:name="org.d3ifcool.warehousehelper.OnboardingTiga"
+        android:name="org.d3ifcool.warehousehelper.boading.OnboardingTiga"
         android:label="fragment_onboarding_tiga"
         tools:layout="@layout/fragment_onboarding_tiga" />
 </navigation>
