initial commit menambahkan custom button inititial commit menambahkan splashscreen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,7 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="16dp"
             android:text="@string/tvemail"
+            android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.031"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +47,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="@string/tvpasswordlog"
+            android:textColor="@android:color/background_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.081"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,9 +58,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
+            android:background="@drawable/custom_button_2"
             android:text="@string/btn_login"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="@+id/inp_pass_login"
             app:layout_constraintStart_toStartOf="@+id/inp_pass_login"
             app:layout_constraintTop_toBottomOf="@+id/inp_pass_login" />
@@ -78,7 +82,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@drawable/custom_button_2"
             android:text="@string/bt_reg_login"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="@+id/btnlogin"
             app:layout_constraintStart_toStartOf="@+id/btnlogin"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
