--- a/app/src/main/res/layout/fragment_onboarding_dua.xml
+++ b/app/src/main/res/layout/fragment_onboarding_dua.xml
@@ -13,7 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="177dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_undraw_file_searching_duff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,12 +54,14 @@
 
     <Button
         android:id="@+id/btn_nextdua"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:background="@drawable/custom_button_2"
         android:text="@string/next"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintEnd_toEndOf="@+id/tv_kalimatdua"
+        app:layout_constraintStart_toStartOf="@+id/tv_kalimatdua"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
