--- a/app/src/main/res/layout/fragment_onboarding_tiga.xml
+++ b/app/src/main/res/layout/fragment_onboarding_tiga.xml
@@ -16,7 +16,7 @@
         android:layout_width="200dp"
         android:layout_height="177dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_undraw_on_the_way_ldaq"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,12 +57,17 @@
 
     <Button
         android:id="@+id/btn_nexttiga"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/custom_button_2"
+        android:shadowColor="@color/design_default_color_primary"
         android:text="@string/btn_keluar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/colorAccent"
+        android:textColorHighlight="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorAccent"
+        app:layout_constraintEnd_toEndOf="@+id/tv_kalimattiga"
+        app:layout_constraintStart_toStartOf="@+id/tv_kalimattiga"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
