--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">#F44336</item>
     </style>
 
+    <style name="AppTheme.PopupOverlay">popupoverlay</style>
+
+
 </resources>
